# fastapi-quality

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.claude/: settings.local.json
.github/workflows/: quality.yml
docs/: usage.md
src/fastapi_quality/: __init__.py  main.py
src/fastapi_quality/api/: routes.py
src/fastapi_quality/models/: schemas.py
tests/: test_api.py
